# fairsharer2

./: LICENSE  README.md  pyproject.toml
.github/workflows/: my_first_actions.yml
src/fairsharer/: __init__.py  main.py
tests/: test_fairsharer.py
