[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fairsharer"
version = "0.1.0"
description = "Fair redistribution algorithm"
authors = [{name = "Evran Bao Tatcheu", email = "baoevran01@gmail.com"}]
requires-python = ">=3.8"
dependencies = ["ruff>=0.3.0",
                "pytest>=8.0.0"]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pytest",
    "pytest-cov",
    "ruff",
]
publishing = [
    "build",
    "twine",
    "wheel",
]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
)/
'''

[tool.isort]
profile = "black"
known_first_party = "fairsharer"
src_paths = ["fairsharer", "tests"]
line_length = "120"

[tool.pylint]  # If you opt to use pylint
# Pylint configuration options

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
extend-select = ["E", "I"]

[tool.ruff.lint.isort]
known-first-party = ["fairsharer"]

[tool.setuptools.packages.find]
where = ["src"]